--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-jwt": "^7.7.5",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mssql": "^9.0.1"
   }
 }
